--- a/Assignment32/contact.html
+++ b/Assignment32/contact.html
@@ -2,131 +2,160 @@
 <html lang="en-us">
 
 <head>
-    <meta charset="UTF-8">
-    <title>Contact Us - Save Budget</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description"
-        content="Get in touch with the Save Budget team for partnership inquiries, support, or general questions. We'd love to hear from you!">
-    <meta name="keywords" content="contact us, support, partnership, feedback, email">
-    <meta name="author" content="Abdullah Alattfee">
+	<meta charset="UTF-8">
+	<title>Contact Us - Save Budget</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description"
+		content="Get in touch with the Save Budget team for partnership inquiries, support, or general questions. We'd love to hear from you!">
+	<meta name="keywords" content="contact us, support, partnership, feedback, email">
+	<meta name="author" content="Abdullah Alattfee">
 
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
-        rel="stylesheet">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+		rel="stylesheet">
 
 
-    <link rel="stylesheet" type="text/css" href="styles/style.css">
-    <link rel="icon" type="image/png"
-        href="https://raw.githubusercontent.com/Abdullah-ghilan/My-new-repo/main/Assignment32/img/favicon-Hamburger.png">
+	<link rel="stylesheet" type="text/css" href="styles/style.css">
+	<link rel="icon" type="image/png"
+		href="https://raw.githubusercontent.com/Abdullah-ghilan/My-new-repo/main/Assignment32/img/favicon-Hamburger.png">
 
 </head>
 
 
 <body>
-    <header class="navbar" aria-label="Main">
-      <a class="brand" href="Home.html" aria-label="Go to homepage">
-        <img class="logo" src="img/logo-removebg-preview.png" alt="Logo">
-        <span class="brand-name">Cozy Café Guide</span>
-      </a>
+	<header class="navbar" aria-label="Main">
+	  <a class="brand" href="Home.html" aria-label="Go to homepage">
+		<img class="logo" src="img/logo-removebg-preview.png" alt="Logo" title ="logo">
+		<span class="brand-name">CozyBeans</span>
+	  </a>
 
-      <nav class="primary" aria-label="Primary">
-        <ul>
-          <li><a href="Browse-Restaurants.html">Browse Cafés</a></li>
-          <li><a href="Reviews.html">Reviews</a></li>
-          <li><a href="top-picks.html">Top Sweets & Spots</a></li>
-          <li><a href="About.html">About</a></li>
-          <li><a href="contact.html">Contact</a></li>
-        </ul>
-      </nav>
+	  <nav class="primary" aria-label="Primary">
+		<ul>
+		   <li><a href="Home.html">Home</a></li>
+			<li><a href="Browse-Cafés.html">Browse Cafés</a></li>
+		  <!-- <li><a href="top-picks.html">Top Picks by Item</a></li>
+		  <li><a href="Reviews.html">Reviews</a></li>
+			<li><a href="About.html">About</a></li> -->
+			<li><a href="contact.html">Contact</a></li>
+		</ul>
+	  </nav>
 
-      <a class="cta" href="#" rel="noopener">Get the App</a>
-    </header>
+	  <a class="cta" href="#" rel="noopener">Login</a>
+	</header>
 
-    <input type="checkbox" id="menu-toggle">
-    <label for="menu-toggle" class="hamburger">
-        <span></span>
-        <span></span>
-        <span></span>
-    </label>
+	<input type="checkbox" id="menu-toggle">
+	<label for="menu-toggle" class="hamburger">
+		<span></span>
+		<span></span>
+		<span></span>
+	</label>
 
-    <nav class="menu">
-        <ul>
-            <li><a href="Browse-Restaurants.html">Browse Cafés</a></li>
-            <li><a href="Reviews.html">Reviews</a></li>
-            <li><a href="top-picks.html">Top Sweets & Spots</a></li>
-            <li><a href="About.html">About</a></li>
-            <li><a href="contact.html">Contact</a></li>
-        </ul>
-    </nav>
+	<nav class="menu">
+		<ul>
+		   <li><a href="Home.html">Home</a></li>
+			<li><a href="Browse-Cafés.html">Browse Cafés</a></li>
+		  <!-- <li><a href="top-picks.html">Top Picks by Item</a></li>
+		  <li><a href="Reviews.html">Reviews</a></li>
+			<li><a href="About.html">About</a></li> -->
+			<li><a href="contact.html">Contact</a></li>
+		</ul>
+	</nav>
 
-    <section id="showcase" class="contact-showcase">
-        <h2> “We’re Here to Help You Save.”</h2>
-        <p class="container"><strong>Got a Question or a Tip?</strong>
-            Use the form below or contact us directly. Your feedback helps us find better budget meals!</p>
-    </section>
+	<section id="showcase" class="contact-showcase">
+		<h2> “We’re Here to Help You Save.”</h2>
+		<p class="container"><strong>Got a Question or a Tip?</strong>
+			Use the form below or contact us directly. Your feedback helps us find better budget meals!</p>
+	</section>
 
-    <main class="container contact-main-grid">
-        
-        <section class="contact-info">
-            <h3 class="section-title">Reach Out Directly</h3>
-            <p>We are a small, dedicated team. We aim to respond to all inquiries within 24-48 hours.</p>
+	<main class="container contact-main-grid">
+		
+		<section class="contact-info">
+			<h3 class="section-title">Reach Out Directly</h3>
+			<p>We are a small, dedicated team. We aim to respond to all inquiries within 24-48 hours.</p>
 
-            <ul class="contact-details">
-                <li><span class="icon">📧</span> <a href="mailto:support@savebudget.com">support@savebudget.com</a></li>
-                <li><span class="icon">🏢</span> Based in Amsterdam, Netherlands</li>
-                <li><span class="icon">📞</span> +31 123 456 789 (Business Inquiries Only)</li>
-            </ul>
+			<ul class="contact-details">
+				<li><span class="icon">📧</span> <a href="mailto:support@savebudget.com">support@savebudget.com</a></li>
+				<li><span class="icon">🏢</span> Based in Amsterdam, Netherlands</li>
+				<li><span class="icon">📞</span> +31 123 456 789 (Business Inquiries Only)</li>
+			</ul>
 
-            <h3 class="follow-us">Follow Us</h3>
-            <ul class="social-links">
-                 <li><a href="https://www.instagram.com/" target="_blank">Instagram</a></li>
-                <li><a href="#">Facebook</a></li>
-                <li><a href="#">Twitter</a></li>
-            </ul>
-        </section>
+			<h3 class="follow-us">Follow Us</h3>
+			<ul class="social-links">
+				 <li><a href="https://www.instagram.com/" target="_blank">Instagram</a></li>
+				<li><a href="#">Facebook</a></li>
+				<li><a href="#">Twitter</a></li>
+			</ul>
+		</section>
 
-        <form action="submit.php" method="post" class="contact-form">
-            <h3 class="section-title">Send Us a Message</h3>
-            
-            <label for="name">Your Name:</label>
-            <input type="text" id="name" name="name" required placeholder="Full Name">
+		<!-- <form action="submit.php" method="post" class="contact-form">
+			<h3 class="section-title">Send Us a Message</h3>
+			
+			<label for="name">Your Name:</label>
+			<input type="text" id="name" name="name" required placeholder="Full Name">
 
-            <label for="email">Your Email:</label>
-            <input type="email" id="email" name="email" required placeholder="e.g. you@email.com">
+			<label for="email">Your Email:</label>
+			<input type="email" id="email" name="email" required placeholder="e.g. you@email.com">
 
-            <label for="subject">Subject:</label>
-            <select id="subject" name="subject" required>
-                <option value="" disabled selected>Select a subject</option>
-                <option value="feedback">General Feedback</option>
-                <option value="partnership">Business/Partnership Inquiry</option>
-                <option value="restaurant_tip">New Restaurant Tip</option>
-                <option value="support">Technical Support</option>
-            </select>
+			<label for="subject">Subject:</label>
+			<select id="subject" name="subject" required>
+				<option value="" disabled selected>Select a subject</option>
+				<option value="feedback">General Feedback</option>
+				<option value="partnership">Business/Partnership Inquiry</option>
+				<option value="restaurant_tip">New Restaurant Tip</option>
+				<option value="support">Technical Support</option>
+			</select>
 
-            <label for="message">Your Message:</label>
-            <textarea id="message" name="message" rows="6" required placeholder="Write your message here..."></textarea>
+			<label for="message">Your Message:</label>
+			<textarea id="message" name="message" rows="6" required placeholder="Write your message here..."></textarea>
 
-            <button type="submit">Send Message</button>
-        </form>
-    </main>
-    <a href="https://www.instagram.com/" target="_blank" id="instagram-button">
-        <img src="img/instagram-logo.png.webp" alt="instagram" title="instagram">
-    </a>
+			<button type="submit">Send Message</button>
+		</form> -->
+
+		<form action="submit.php" method="post" class="contact-form">
+  <fieldset>
+	<legend>Contact CozyBeans</legend>
+
+	<label for="name">Your Name:</label>
+	<input type="text" id="name" name="name" required placeholder="Full Name">
+
+	<label for="email">Your Email:</label>
+	<input type="email" id="email" name="email" required placeholder="e.g. you@email.com">
+
+	<label for="subject">Subject:</label>
+	<select id="subject" name="subject" required>
+	  <option value="" disabled selected>Select a subject</option>
+	  <option value="feedback">General Feedback</option>
+	  <option value="partnership">Business/Partnership Inquiry</option>
+	  <option value="cafe_tip">New Café Tip</option>
+	  <option value="support">Technical Support</option>
+	</select>
+
+	<label for="message">Your Message:</label>
+			<textarea id="message" name="message" rows="6" required placeholder="Write your message here..."></textarea>
+
+	<input type="submit" value="Send Message">
+  </fieldset>
+</form>
+
+	</main>
+	<a href="https://www.instagram.com/" target="_blank" id="instagram-button">
+		<img src="img/instagram-logo.png.webp" alt="instagram" title="instagram">
+	</a>
 
 
-    <footer id="main-footer">
-        &copy;All Rights Reserved 2001.
-    </footer>
+	<footer id="main-footer">
+		&copy;All Rights Reserved 2001.
+	</footer>
 
 
-    <input type="checkbox" id="cookies-toggle" hidden>
+	<input type="checkbox" id="cookies-toggle" hidden>
 
-    <section id="cookies-banner">
-        We use cookies to improve your experience.
-        <label for="cookies-toggle" id="cookies-ok">OK</label>
-    </section>
+	<section id="cookies-banner">
+		We use cookies to improve your experience.
+		<label for="cookies-toggle" id="cookies-ok">OK</label>
+	</section>
 
 
 </body>
