--- a/Assignment32/Browse-Cafés.html
+++ b/Assignment32/Browse-Cafés.html
@@ -16,7 +16,7 @@
 				rel="stylesheet">
 
 
-		<link rel="stylesheet" type="text/css" href="styles/style.css">
+		<link rel="stylesheet" type="text/css" href="css/style.css">
 		<link rel="icon" type="image/png"
 				href="https://raw.githubusercontent.com/Abdullah-ghilan/My-new-repo/main/Assignment32/img/favicon-Hamburger.png">
 
