--- a/Assignment32/Browse-Cafés.html
+++ b/Assignment32/Browse-Cafés.html
@@ -26,14 +26,14 @@
 
 <body class="page-browse">
 		<header class="navbar" aria-label="Main">
-			<a class="brand" href="Home.html" aria-label="Go to homepage">
+			<a class="brand" href="index.html" aria-label="Go to homepage">
 				<img class="logo" src="img/logo-removebg-preview.png" alt="Logo" title="logo">
 				<span class="brand-name">CozyBeans</span>
 			</a>
 
 			<nav class="primary" aria-label="Primary">
 				<ul>
-						 <li><a href="Home.html">Home</a></li>
+						 <li><a href="index.html">Home</a></li>
 						<li><a href="Browse-Cafés.html">Browse Cafés</a></li>
 					<!-- <li><a href="top-picks.html">Top Picks by Item</a></li>
 					<li><a href="Reviews.html">Reviews</a></li>
@@ -54,7 +54,7 @@
 
 		<nav class="menu">
 				<ul>
-					 <li><a href="Home.html">Home</a></li>
+					 <li><a href="index.html">Home</a></li>
 						<li><a href="Browse-Cafés.html">Browse Cafés</a></li>
 					<!-- <li><a href="top-picks.html">Top Picks by Item</a></li>
 					<li><a href="Reviews.html">Reviews</a></li>
