--- a/Assignment32/index.html
+++ b/Assignment32/index.html
@@ -54,7 +54,7 @@
 
 	<nav class="menu">
 		<ul>
-		 <li><a href="Home.html">Home</a></li>
+		 <li><a href="index.html">Home</a></li>
 			<li><a href="Browse-Cafés.html">Browse Cafés</a></li>
 		  <!-- <li><a href="top-picks.html">Top Picks by Item</a></li>
 		  <li><a href="Reviews.html">Reviews</a></li>
