--- a/final/Browse-Cafés.html
+++ b/final/Browse-Cafés.html
@@ -18,7 +18,7 @@
 
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 		<link rel="icon" type="image/png"
-				href="https://raw.githubusercontent.com/Abdullah-ghilan/My-new-repo/main/Assignment32/img/favicon-Hamburger.png">
+				href="img/logo-removebg-preview.png">
 
 </head>
 
